# esp32-led-simple

./: .gitignore  ARCHITECTURE.md  BLE_PROTOCOL.md  CLAUDE.md  GETTING_STARTED.md  NOTICE  README.md
.github/workflows/: firmware.yml  publish.yml
docs/: CNAME  flash.html  index.html  style.css
docs/firmware/: manifest.json
firmware/: FIRMWARE_GUIDE.md  WOKWI.md  diagram.json  platformio.ini  wokwi.toml
firmware/src/: bold_font.h  config.h  console.cpp  console.h  main.cpp  version.h
firmware/test/test_console/: test_console.cpp
hardware/: LICENSE
hardware/case/: README.md
ios/: PRIVACY.md  README.md  Signing.xcconfig  project.yml
ios/LEDTicker/: AppState.swift  BLEManager.swift  ConnectionChip.swift  DevicePickerView.swift  DeviceSettingsView.swift  DeviceSubtitleNav.swift  DeviceTab.swift  DisconnectedView.swift  DisplayTab.swift  Haptics.swift  Info.plist  KnownDevice.swift  LEDTickerApp.swift  MessagesTab.swift  Payloads.swift  RootView.swift  StatusTab.swift  StocksTab.swift  Toast.swift  WeatherTab.swift
ios/LEDTickerTests/: KnownDeviceTests.swift  PayloadsTests.swift
ios/tools/: make-icon.swift
plans/: 2026-06-13-serial-console.md
src/: config.h  main.cpp  version.h
tools/: README.md  gen_bold_font.py  led.py  pyproject.toml
tools/src/led_ticker/: auth.py  cli.py  client.py  protocol.py
tools/tests/: test_auth.py  test_cli.py  test_client.py  test_protocol.py
