[project]
name = "led-ticker"
version = "0.3.0"
description = "Python client library and CLI for the LED-Ticker BLE device"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sunil Sayala" }]
requires-python = ">=3.11"
dependencies = ["bleak>=0.21"]

[project.urls]
Homepage = "https://github.com/ssayala/led-ticker"
Repository = "https://github.com/ssayala/led-ticker"

[project.scripts]
led = "led_ticker.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/led_ticker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
